# hdlscw

cpp/: CMakeLists.txt  hdlscw-config.cmake.in
cpp/cmake/: hdlscw-config.cmake
cpp/include/hdlscw/: wrapper_base.hpp
python/src/hdlscw/: __main__.py  wrapper.py
python/src/hdlscw/cmake/: __main__.py
src/hdlscw/: __main__.py  wrapper.py
src/hdlscw/cmake/: __main__.py  gensrc.py
